# VideoDL

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini  video_dl.py
docs/: Manual.rst  VideoDL.conf.5.rst  VideoDL.conf.5.yaml  video-dl.1.rst  video-dl.1.yaml
docs/include/: CONFIGKEYS.rst  OPTIONS.rst  SYNOPSIS.rst
examples/: VideoDL.conf  options.json
scripts/: get_mtime.py  get_version.py
tests/: test_cli.py  test_end_to_end.py  test_video_dl.py
