[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
files = [
    "video_dl.py",
    "setup.py",
    "tests",
    "scripts",
]
warn_unused_configs = true
warn_redundant_casts = true
strict_equality = true

[[tool.mypy.overrides]]
module = "video_dl"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pylint.main]
py-version = "3.9"

[tool.pylint."messages control"]
disable = "missing-docstring"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "SIM115", # open-file-with-context-handler
    "UP015",  # redundant-open-modes  (why is more explicitness bad?)
]
select = [
    "E",      # pycodestyle Error
    "W",      # pycodestyle Warning
    "F",      # Pyflakes
    "I",      # isort
    "Q",      # flake8-quotes
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PL",     # Pylint
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.flake8-bugbear]
# Extend the list of functions returning "immutable" objects,
# allowing them to be used in argument defaults (B008) and
# dataclass defaults (RUF009).
extend-immutable-calls = ["video_dl.Duration"]
