[metadata]
name = VideoDL
version = attr: video_dl.__version__
author = Dylan Maltby
description = Video download manager for yt-dlp
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
license_files = COPYING

[options]
include_package_data = True
py_modules = video_dl
python_requires = >=3.10
install_requires = yt-dlp[default]

[options.extras_require]
YAML = PyYAML

[options.entry_points]
console_scripts =
    video-dl = video_dl:main
